--- a/demoApp/demoApp/en.lproj/MainStoryboard.storyboard
+++ b/demoApp/demoApp/en.lproj/MainStoryboard.storyboard
@@ -610,6 +610,16 @@
                                     <constraint firstAttribute="height" constant="116" type="user" id="ajo-Br-I0O"/>
                                 </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=":questDescription" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" useAutomaticPreferredMaxLayoutWidth="YES" preferredMaxLayoutWidth="288" translatesAutoresizingMaskIntoConstraints="NO" id="5fx-f4-X0L">
+                                <rect key="frame" x="16" y="303" width="288" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="D6W-lV-iUK"/>
+                                    <constraint firstAttribute="width" constant="288" type="user" id="dWk-Cg-glB"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=":questName" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" useAutomaticPreferredMaxLayoutWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ogE-me-wnr">
                                 <rect key="frame" x="35" y="117" width="250" height="21"/>
                                 <constraints>
@@ -640,9 +650,6 @@
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2EY-kV-qHZ">
                                 <rect key="frame" x="106" y="436" width="109" height="44"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="109" id="h0u-tL-lyk"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
                                 <state key="normal" title="Join">
                                     <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
@@ -651,11 +658,14 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="9sF-pC-2Z4" kind="push" identifier="showMissionInfoScreenViaJoin" id="hGQ-6A-siI"/>
+                                    <segue destination="9sF-pC-2Z4" kind="push" identifier="showMissionInfoScreenViaJoin" id="Ik4-Yg-fzj"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TLj-Ee-jRn">
                                 <rect key="frame" x="106" y="436" width="109" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="109" id="YMH-s8-RQI"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
                                 <state key="normal" title="Continue">
                                     <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
@@ -664,36 +674,26 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="9sF-pC-2Z4" kind="push" identifier="showMissionInfoScreenViaContinue" id="h8c-zJ-igg"/>
+                                    <segue destination="9sF-pC-2Z4" kind="push" identifier="showMissionInfoScreenViaContinue" id="srz-l5-pra"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=":questDescription" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" useAutomaticPreferredMaxLayoutWidth="YES" preferredMaxLayoutWidth="288" translatesAutoresizingMaskIntoConstraints="NO" id="5fx-f4-X0L">
-                                <rect key="frame" x="16" y="303" width="288" height="50"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="D6W-lV-iUK"/>
-                                    <constraint firstAttribute="width" constant="288" type="user" id="dWk-Cg-glB"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="ogE-me-wnr" firstAttribute="top" secondItem="UiV-lN-7SB" secondAttribute="top" constant="117" id="1RQ-Dy-OW1"/>
                             <constraint firstItem="VR4-0n-2ea" firstAttribute="top" secondItem="UiV-lN-7SB" secondAttribute="top" constant="158" type="user" id="3o8-u8-FrR"/>
-                            <constraint firstAttribute="bottom" secondItem="TLj-Ee-jRn" secondAttribute="bottom" constant="69" id="DFh-mY-tGf"/>
                             <constraint firstItem="TLj-Ee-jRn" firstAttribute="trailing" secondItem="2EY-kV-qHZ" secondAttribute="trailing" type="default" id="Ga9-cr-go3"/>
-                            <constraint firstItem="TLj-Ee-jRn" firstAttribute="baseline" secondItem="2EY-kV-qHZ" secondAttribute="baseline" type="default" id="KTJ-r9-g0s"/>
                             <constraint firstItem="TLj-Ee-jRn" firstAttribute="leading" secondItem="2EY-kV-qHZ" secondAttribute="leading" type="default" id="KUD-nq-sCN"/>
                             <constraint firstItem="5fx-f4-X0L" firstAttribute="leading" secondItem="UiV-lN-7SB" secondAttribute="leadingMargin" type="user" id="LhJ-nP-zOh"/>
                             <constraint firstItem="VR4-0n-2ea" firstAttribute="centerX" secondItem="5fx-f4-X0L" secondAttribute="centerX" type="default" id="Myc-WN-Ci6"/>
+                            <constraint firstItem="TLj-Ee-jRn" firstAttribute="baseline" secondItem="2EY-kV-qHZ" secondAttribute="baseline" type="default" id="NWq-Bw-1aC"/>
                             <constraint firstItem="Y0p-sq-Zet" firstAttribute="top" secondItem="kqn-C7-vex" secondAttribute="bottom" constant="1" type="user" id="P3W-He-sZ6"/>
                             <constraint firstItem="kqn-C7-vex" firstAttribute="top" secondItem="5fx-f4-X0L" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="Vd2-TZ-ozq"/>
                             <constraint firstItem="Y0p-sq-Zet" firstAttribute="leading" secondItem="UiV-lN-7SB" secondAttribute="leading" constant="75" id="Zun-a9-koV"/>
+                            <constraint firstItem="TLj-Ee-jRn" firstAttribute="centerX" secondItem="5fx-f4-X0L" secondAttribute="centerX" type="default" id="h8j-Ck-Zev"/>
+                            <constraint firstAttribute="bottom" secondItem="TLj-Ee-jRn" secondAttribute="bottom" constant="69" id="jpM-eL-q6I"/>
                             <constraint firstItem="ogE-me-wnr" firstAttribute="centerX" secondItem="VR4-0n-2ea" secondAttribute="centerX" type="default" id="lK2-lB-L2b"/>
                             <constraint firstItem="kqn-C7-vex" firstAttribute="leading" secondItem="VR4-0n-2ea" secondAttribute="leading" type="default" id="vLC-lE-wgd"/>
-                            <constraint firstItem="5fx-f4-X0L" firstAttribute="centerX" secondItem="TLj-Ee-jRn" secondAttribute="centerX" type="default" id="yIh-zO-Qle"/>
                             <constraint firstAttribute="bottom" secondItem="5fx-f4-X0L" secondAttribute="bottom" constant="195" id="zYN-B9-tqz"/>
                         </constraints>
                     </view>
@@ -714,11 +714,40 @@
         <!--Mission Info-->
         <scene sceneID="RKk-la-HoG">
             <objects>
-                <viewController title="Mission Info" id="9sF-pC-2Z4" sceneMemberID="viewController">
+                <viewController title="Mission Info" id="9sF-pC-2Z4" customClass="missionViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="bMp-1B-ysX">
                         <rect key="frame" x="0.0" y="64" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="7UP-ne-A7T">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="462"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="462" id="3af-QZ-SJR"/>
+                                </constraints>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="PUL-2r-4Gw">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="9sF-pC-2Z4" id="oZW-HP-Fwk"/>
+                                    <outlet property="delegate" destination="9sF-pC-2Z4" id="5mx-fD-nES"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="7UP-ne-A7T" secondAttribute="trailing" type="default" id="GTX-de-EMZ"/>
+                            <constraint firstItem="7UP-ne-A7T" firstAttribute="leading" secondItem="bMp-1B-ysX" secondAttribute="leading" type="default" id="KU8-vh-Kuk"/>
+                            <constraint firstItem="7UP-ne-A7T" firstAttribute="top" secondItem="bMp-1B-ysX" secondAttribute="top" type="default" id="pXJ-Fy-Mx8"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="21i-ad-r4d"/>
                 </viewController>
@@ -729,7 +758,7 @@
         <!--Mainmenu-->
         <scene sceneID="vXO-TD-T8N">
             <objects>
-                <viewController title="Mainmenu" id="26S-FX-YoR" customClass="demoViewController" sceneMemberID="viewController">
+                <viewController title="Mainmenu" id="26S-FX-YoR" customClass="mainmenuViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="dEr-46-8uB">
                         <rect key="frame" x="0.0" y="20" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -826,6 +855,6 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="h8c-zJ-igg"/>
+        <segue reference="Ik4-Yg-fzj"/>
     </inferredMetricsTieBreakers>
 </document>
