--- a/demoApp/demoApp/en.lproj/MainStoryboard.storyboard
+++ b/demoApp/demoApp/en.lproj/MainStoryboard.storyboard
@@ -4,7 +4,6 @@
         <deployment identifier="iOS"/>
         <development version="4600" identifier="xcode"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Demo View Controller-->
@@ -603,15 +602,17 @@
                         <rect key="frame" x="0.0" y="64" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VR4-0n-2ea">
-                                <rect key="frame" x="48" y="158" width="225" height="116"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="TopLeft" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=":rewardsText" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" useAutomaticPreferredMaxLayoutWidth="YES" preferredMaxLayoutWidth="82" translatesAutoresizingMaskIntoConstraints="NO" id="Y0p-sq-Zet">
+                                <rect key="frame" x="75" y="383" width="82" height="40"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="225" id="2Lp-7T-qHd"/>
-                                    <constraint firstAttribute="height" constant="116" type="user" id="ajo-Br-I0O"/>
+                                    <constraint firstAttribute="height" constant="40" type="user" id="UEK-6Q-RiG"/>
                                 </constraints>
-                            </imageView>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=":questDescription" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" useAutomaticPreferredMaxLayoutWidth="YES" preferredMaxLayoutWidth="288" translatesAutoresizingMaskIntoConstraints="NO" id="5fx-f4-X0L">
-                                <rect key="frame" x="16" y="303" width="288" height="50"/>
+                                <rect key="frame" x="16" y="284" width="288" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="D6W-lV-iUK"/>
                                     <constraint firstAttribute="width" constant="288" type="user" id="dWk-Cg-glB"/>
@@ -620,36 +621,18 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=":questName" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" useAutomaticPreferredMaxLayoutWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ogE-me-wnr">
-                                <rect key="frame" x="35" y="117" width="250" height="21"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VR4-0n-2ea">
+                                <rect key="frame" x="54" y="160" width="225" height="116"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="250" id="JsN-kr-A3g"/>
+                                    <constraint firstAttribute="width" constant="225" id="2Lp-7T-qHd"/>
+                                    <constraint firstAttribute="height" constant="116" type="user" id="ajo-Br-I0O"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rewards" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" useAutomaticPreferredMaxLayoutWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kqn-C7-vex">
-                                <rect key="frame" x="48" y="361" width="68" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="68" id="l4i-fP-Vn6"/>
-                                    <constraint firstAttribute="height" constant="21" type="user" id="sYq-w9-e7b"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="TopLeft" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=":rewardsText" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" useAutomaticPreferredMaxLayoutWidth="YES" preferredMaxLayoutWidth="82" translatesAutoresizingMaskIntoConstraints="NO" id="Y0p-sq-Zet">
-                                <rect key="frame" x="75" y="383" width="82" height="40"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="UEK-6Q-RiG"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2EY-kV-qHZ">
-                                <rect key="frame" x="106" y="436" width="109" height="44"/>
+                                <rect key="frame" x="106" y="453" width="109" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="43" type="user" id="cNo-3Q-Qia"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
                                 <state key="normal" title="Join">
                                     <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
@@ -662,7 +645,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TLj-Ee-jRn">
-                                <rect key="frame" x="106" y="436" width="109" height="44"/>
+                                <rect key="frame" x="106" y="453" width="109" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="109" id="YMH-s8-RQI"/>
                                 </constraints>
@@ -677,24 +660,45 @@
                                     <segue destination="9sF-pC-2Z4" kind="push" identifier="showMissionInfoScreenViaContinue" id="srz-l5-pra"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rewards" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" useAutomaticPreferredMaxLayoutWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kqn-C7-vex">
+                                <rect key="frame" x="40" y="366" width="68" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="68" id="l4i-fP-Vn6"/>
+                                    <constraint firstAttribute="height" constant="21" type="user" id="sYq-w9-e7b"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=":questName" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" useAutomaticPreferredMaxLayoutWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ogE-me-wnr">
+                                <rect key="frame" x="40" y="112" width="250" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="250" id="JsN-kr-A3g"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="ogE-me-wnr" firstAttribute="top" secondItem="UiV-lN-7SB" secondAttribute="top" constant="117" id="1RQ-Dy-OW1"/>
-                            <constraint firstItem="VR4-0n-2ea" firstAttribute="top" secondItem="UiV-lN-7SB" secondAttribute="top" constant="158" type="user" id="3o8-u8-FrR"/>
-                            <constraint firstItem="TLj-Ee-jRn" firstAttribute="trailing" secondItem="2EY-kV-qHZ" secondAttribute="trailing" type="default" id="Ga9-cr-go3"/>
-                            <constraint firstItem="TLj-Ee-jRn" firstAttribute="leading" secondItem="2EY-kV-qHZ" secondAttribute="leading" type="default" id="KUD-nq-sCN"/>
-                            <constraint firstItem="5fx-f4-X0L" firstAttribute="leading" secondItem="UiV-lN-7SB" secondAttribute="leadingMargin" type="user" id="LhJ-nP-zOh"/>
-                            <constraint firstItem="VR4-0n-2ea" firstAttribute="centerX" secondItem="5fx-f4-X0L" secondAttribute="centerX" type="default" id="Myc-WN-Ci6"/>
-                            <constraint firstItem="TLj-Ee-jRn" firstAttribute="baseline" secondItem="2EY-kV-qHZ" secondAttribute="baseline" type="default" id="NWq-Bw-1aC"/>
-                            <constraint firstItem="Y0p-sq-Zet" firstAttribute="top" secondItem="kqn-C7-vex" secondAttribute="bottom" constant="1" type="user" id="P3W-He-sZ6"/>
-                            <constraint firstItem="kqn-C7-vex" firstAttribute="top" secondItem="5fx-f4-X0L" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="Vd2-TZ-ozq"/>
+                            <constraint firstItem="2EY-kV-qHZ" firstAttribute="centerX" secondItem="5fx-f4-X0L" secondAttribute="centerX" type="default" id="6o3-ab-YCP"/>
+                            <constraint firstItem="TLj-Ee-jRn" firstAttribute="trailing" secondItem="2EY-kV-qHZ" secondAttribute="trailing" type="default" id="AAY-4m-NHu"/>
+                            <constraint firstItem="TLj-Ee-jRn" firstAttribute="top" secondItem="Y0p-sq-Zet" secondAttribute="bottom" constant="30" type="user" id="AOA-A3-eAP"/>
+                            <constraint firstItem="VR4-0n-2ea" firstAttribute="top" secondItem="UiV-lN-7SB" secondAttribute="top" constant="160" id="BAe-Jh-iZk"/>
+                            <constraint firstItem="VR4-0n-2ea" firstAttribute="leading" secondItem="UiV-lN-7SB" secondAttribute="leading" constant="54" id="ENE-XF-ji4"/>
+                            <constraint firstItem="ogE-me-wnr" firstAttribute="leading" secondItem="kqn-C7-vex" secondAttribute="leading" type="default" id="H80-DX-NRM"/>
+                            <constraint firstItem="TLj-Ee-jRn" firstAttribute="leading" secondItem="2EY-kV-qHZ" secondAttribute="leading" type="default" id="MxU-vu-7dC"/>
+                            <constraint firstItem="TLj-Ee-jRn" firstAttribute="baseline" secondItem="2EY-kV-qHZ" secondAttribute="baseline" type="user" id="NWq-Bw-1aC"/>
+                            <constraint firstAttribute="bottom" secondItem="TLj-Ee-jRn" secondAttribute="bottom" constant="52" type="user" id="SA9-gc-YQb"/>
                             <constraint firstItem="Y0p-sq-Zet" firstAttribute="leading" secondItem="UiV-lN-7SB" secondAttribute="leading" constant="75" id="Zun-a9-koV"/>
-                            <constraint firstItem="TLj-Ee-jRn" firstAttribute="centerX" secondItem="5fx-f4-X0L" secondAttribute="centerX" type="default" id="h8j-Ck-Zev"/>
-                            <constraint firstAttribute="bottom" secondItem="TLj-Ee-jRn" secondAttribute="bottom" constant="69" id="jpM-eL-q6I"/>
-                            <constraint firstItem="ogE-me-wnr" firstAttribute="centerX" secondItem="VR4-0n-2ea" secondAttribute="centerX" type="default" id="lK2-lB-L2b"/>
-                            <constraint firstItem="kqn-C7-vex" firstAttribute="leading" secondItem="VR4-0n-2ea" secondAttribute="leading" type="default" id="vLC-lE-wgd"/>
-                            <constraint firstAttribute="bottom" secondItem="5fx-f4-X0L" secondAttribute="bottom" constant="195" id="zYN-B9-tqz"/>
+                            <constraint firstItem="5fx-f4-X0L" firstAttribute="top" secondItem="VR4-0n-2ea" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="fV0-oz-id7"/>
+                            <constraint firstItem="2EY-kV-qHZ" firstAttribute="top" secondItem="Y0p-sq-Zet" secondAttribute="bottom" constant="30" type="user" id="jpF-0W-gNe"/>
+                            <constraint firstItem="ogE-me-wnr" firstAttribute="top" secondItem="UiV-lN-7SB" secondAttribute="top" constant="112" id="lT9-qa-drg"/>
+                            <constraint firstAttribute="bottom" secondItem="kqn-C7-vex" secondAttribute="bottom" constant="161" type="user" id="mcW-TF-mhi"/>
+                            <constraint firstItem="Y0p-sq-Zet" firstAttribute="top" secondItem="kqn-C7-vex" secondAttribute="bottom" constant="-4" type="user" id="vkO-vT-6Em"/>
+                            <constraint firstItem="TLj-Ee-jRn" firstAttribute="centerX" secondItem="UiV-lN-7SB" secondAttribute="centerX" type="default" id="xtM-G1-Vxc"/>
+                            <constraint firstItem="ogE-me-wnr" firstAttribute="leading" secondItem="UiV-lN-7SB" secondAttribute="leading" constant="40" id="zKZ-Ys-u4X"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="R8O-Xf-co3"/>
